# niveum

./: .gitignore  README.md
Examples/: .gitignore
Examples/Communication/CPP/Src/Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  ClientImplementation.h  Program.cpp  Utility.cpp  Utility.h
Examples/Communication/CPP/Src/Client/BaseSystem/: Cryptography.cpp  ExceptionStackTrace.cpp  ExceptionStackTrace.h  StringUtilities.cpp  StringUtilities.h  ThreadLocalVariable.h
Examples/Communication/CPP/Src/Client/Clients/: BinaryCountPacketClient.h  BinarySocketClient.h  IContext.h  ISerializationClient.h  SerializationClientAdapter.h  StreamedClient.h  TcpClient.h  UdpClient.h
Examples/Communication/CPP/Src/Client/Context/: ClientContext.h  SerializationClientAdapter.h
Examples/Communication/CPP/Src/Server/: CMakeLists.txt  Program.cpp  Server.vcxproj  Server.vcxproj.filters  Utility.h  Workaround.h
Examples/Communication/CPP/Src/Server/BaseSystem/: AsyncConsumer.h  AutoRelease.h  AutoResetEvent.h  CancellationToken.h  Cryptography.cpp  Cryptography.h  ExceptionStackTrace.cpp  ExceptionStackTrace.h  Optional.h  StringUtilities.cpp  StringUtilities.h  ThreadLocalRandom.cpp  ThreadLocalRandom.h  ThreadLocalVariable.h  Times.cpp  Times.h
Examples/Communication/CPP/Src/Server/Context/: SerializationServerAdapter.cpp  SerializationServerAdapter.h  ServerContext.cpp  ServerContext.h  SessionContext.h
Examples/Communication/CPP/Src/Server/Net/: StreamedAsyncSocket.h  TcpServer.cpp  TcpServer.h  TcpServerDef.h  TcpServerImpl.h  TcpSession.cpp  TcpSession.h  TcpSessionDef.h
Examples/Communication/CPP/Src/Server/Servers/: BinaryCountPacketServer.h  BinarySocketServer.cpp  BinarySocketServer.h  BinarySocketSession.cpp  BinarySocketSession.h  Concept.h  IContext.h  ISerializationServer.h  Rc4PacketServerTransformer.h  SessionStateMachine.h  StreamedServer.h  TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h  UdpServer.cpp  UdpServer.h  UdpSession.cpp  UdpSession.h
Examples/Communication/CPP/Src/Server/Services/: Admin.cpp  Base.cpp  Compatibility.cpp  Mail.cpp  Message.cpp  ServerImplementation.h  TestDuplication.cpp  TestPerformance.cpp
Examples/Communication/CPP/Src/Server/Util/: ConsoleLogger.h  SessionLogEntry.h
Examples/Database/TestCPP/Src/: Build.cmd  CMakeLists.txt  Clear.cmd  DataAccessManagerMemory.cpp  DataAccessManagerMySQL.cpp  Database.sln  Database.slnx  DatabaseMemory.vcxproj  DatabaseMemory.vcxproj.filters  DatabaseMySQL.vcxproj  LoadTest.h  PerformanceTest.h  Program.cpp  TestService.h
Examples/Database/TestCPP/Src/BaseSystem/: AutoResetEvent.h  StringUtilities.cpp  StringUtilities.h  ThreadLocalVariable.cpp
Examples/Database/TestCPP/Src/MySql/: DataAccessBase.cpp  DataAccessBase.h  DataAccessImplementation.h
Examples/Database/TestCPPMySQL/Src/: CMakeLists.txt  Clear.cmd  DataAccessManager.cpp  DataAccessManager.h  Database.sln  Database.vcxproj  Database.vcxproj.filters  IDataAccess.h  LoadTest.h  LockedVariable.h  PerformanceTest.h  Program.cpp  TestService.h  Utility.h
Examples/Database/TestCPPMySQL/Src/MySql/: DataAccessBase.cpp  DataAccessBase.h  DataAccessImplementation.h
Examples/Serialization/Rust/: Build.cmd  Cargo.toml  Clear.cmd
Examples/Serialization/Rust/src/: main.rs
Src/: Archieve.cmd  Build.cmd  Clear.cmd  DownloadDatabasePackages.cmd  Niveum.sln  Niveum.slnx  Publish.cmd  Yuki.sln  (+1 more)
trunk/Yuki/Examples/Communication/CPP/Src/Server/: CMakeLists.txt  Program.cpp  Server.vcxproj  Server.vcxproj.filters
trunk/Yuki/Examples/Communication/CPP/Src/Server/BaseSystem/: AsyncConsumer.h  AutoRelease.h  AutoResetEvent.h  ExceptionStackTrace.cpp  LockedVariable.h  Optional.h  ThreadLocalRandom.h  ThreadLocalVariable.cpp  ThreadLocalVariable.h  Times.cpp
trunk/Yuki/Examples/Communication/CPP/Src/Server/Context/: SerializationServerAdapter.cpp  SerializationServerAdapter.h  ServerContext.cpp  ServerContext.h  SessionContext.h
trunk/Yuki/Examples/Communication/CPP/Src/Server/Net/: StreamedAsyncSocket.h  TcpServer.h  TcpSession.h  TcpSessionImpl.h
trunk/Yuki/Examples/Communication/CPP/Src/Server/Servers/: BinarySocketServer.cpp  BinarySocketServer.h  BinarySocketSession.cpp  BinarySocketSession.h  IContext.h  SessionStateMachine.h  TcpServer.cpp  TcpSession.cpp  TcpSession.h  UdpServer.cpp  UdpServer.h  UdpSession.cpp  UdpSession.h
trunk/Yuki/Examples/Communication/CPP/Src/Server/Services/: Base.cpp  Compatibility.cpp  Message.cpp  ServerImplementation.h
trunk/Yuki/Examples/Communication/CPP/Src/Server/Util/: SessionLogEntry.h
trunk/Yuki/Examples/Database/TestCPPMySQL/Src/: CMakeLists.txt  Clear.cmd  DataAccessManager.cpp  Database.sln  Database.vcxproj  Database.vcxproj.filters  IDataAccess.h  LoadTest.h  LockedVariable.h  Program.cpp  TestService.h  Utility.cpp
trunk/Yuki/Examples/Database/TestCPPMySQL/Src/BaseSystem/: ThreadLocalVariable.cpp
trunk/Yuki/Examples/Database/TestCPPMySQL/Src/MySql/: DataAccessBase.cpp  DataAccessBase.h  DataAccessImplementation.h
trunk/Yuki/Examples/Serialization/CPP/Src/: CMakeLists.txt  DataCopy.sln  DataCopy.vcxproj  DataCopy.vcxproj.filters  Program.cpp  Streams.h
trunk/Yuki/Examples/Serialization/CPP/Src/BaseSystem/: StringUtilities.cpp
(+1590 files in other folders)
