[package]
name = "data-copy"
version = "0.1.0"
edition = "2024"
description = "Niveum binary serialization example — data copy tool"
license = "Unlicense"
authors = ["F.R.C."]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[profile.release]
debug = true
split-debuginfo = "packed"
