cmake_minimum_required(VERSION 2.8)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
if(EXISTS "../Lib/boost")
    set(BOOST_ROOT "../Lib/boost")
endif()
find_package(Boost 1.49.0 COMPONENTS system thread date_time regex serialization REQUIRED)
find_package(Threads)
add_definitions("-std=c++11")
include_directories("../Lib/utf8")
include_directories("../Lib_Gcc")
include_directories(${Boost_INCLUDE_DIRS})
include_directories("/usr/include/mysql-connector")
include_directories(".")

file(GLOB_RECURSE SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp") 
string(REGEX REPLACE "CMakeFiles/[^;]+;?" "" SRCS "${SRCS}")
add_executable(Database ${SRCS})
target_link_libraries(Database ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} mysqlcppconn)
