cmake_minimum_required(VERSION 2.8)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(BOOST_ROOT "../../Lib/boost")
set(CMAKE_CXX_COMPILER "g++-4.6")
find_package(Boost 1.49.0 COMPONENTS system thread date_time regex serialization REQUIRED)
find_package(Threads)
add_definitions("-std=c++0x")
include_directories("../../Lib_Gcc")
include_directories(".")

include_directories(${Boost_INCLUDE_DIRS})
add_executable(Client Utility.cpp Program.cpp)
target_link_libraries(Client ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
